Fix tabs and notebook header z-index issues.

--- a/src/notebook.scss
+++ b/src/notebook.scss
@@ -189,7 +189,7 @@ body.notebook {
           border: solid 2px  $cc-orange-dark1;
           border-bottom: solid 2px $cc-orange-dark1;
           background-color: $cc-orange-dark1;
-          z-index: 100 !important;
+          z-index: $notebookHeaderZIndex - 1 !important;
         }
 
         &.selected {
@@ -197,7 +197,7 @@ body.notebook {
         }
 
         &:hover {
-          z-index: 200 !important;
+          z-index: $notebookHeaderZIndex !important;
         }
       }
     }
@@ -253,5 +253,11 @@ body.notebook {
     font-size: $notebook_font_size;
     background-color: $cc-teal-dark1;
     border-radius: 10px 10px;
+  }
+
+  .expandable-container {
+    position: absolute;
+    top: 120px;
+    right: 0px;
   }
 }
